NEWS for the Greg package

Changes fro 1.1.2
-----------------
* Added a check for null as input parameter to printCrudeAndAdjusted

Changes for 1.1.1
-----------------
* The reference now has the same number of digits as the rest of the coefficients
* Added htmlTable.printCrudeAndAdjusted for more flexible handling

Changes for 1.1.0
-----------------
* The printCrudeAndAdjusted calls now the correct print version
* Added vignette for basic use cases
* Fixed non-linearity
* Added options-alternative to tailor printCrudeAdj output
* Fixed issue #5
* Fixed tspanner handling for printCrudeAndAdjustedModel
* Bug when with descriptive stats due to missing misspelled (useNa instead of useNA)
* Added a rbind for printCrudeAndAdjusted
* Added handling of missing variable for the outcome estimator
* Fixed simpleRmsAnova
* Fixed getModelData with subsetting arguments not being constants
* All show_missing are now useNA to comply with main package standards
* A few bug fixes

Changes for 1.0.0
-----------------
* Changed the desc_ arguments into a list using the caDescribeOpts
* Refactored major parts of the printCrudeAndAdjusted
* Changed to use model.frame() under the hood - hopefully stabilizing the functions
  as it uses a more standard R-approach
* The update() now actively runs under the model environment
* The plotHR is updated and can now plot contrasts if provided a rms-package regression
  allowing for efficient comparison of multiple models. Internal functions have also
  been externalized.
* All current unit tests now pass and several new ones have been added
* Implemented DRY roxygen2 code
* The getCrudeAndAdjusted now retains cluster and stratas - there are options for
  leaving these out to retain old behavior
* The getCrudeAndAdjusted now allows for selecting variables. The printCrudeAndAdjusted
  now passes on the order option when variable selection is of interest.
* Cleaned variables for the forestplot2 functions