@@ -1,5 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method("[",getCrudeAndAdjustedModelData)
+S3method("[",printCrudeAndAdjusted)
 S3method(addNonlinearity,default)
 S3method(addNonlinearity,rms)
 S3method(bread,ols)
