@@ -1,6 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/getCrudeAndAdjustedModelData.R, R/getCrudeAndAdjustedModelData.rms.R
 \name{getCrudeAndAdjustedModelData}
+\alias{[.getCrudeAndAdjustedModelData}
 \alias{getCrudeAndAdjustedModelData}
 \alias{getCrudeAndAdjustedModelData.default}
 \alias{getCrudeAndAdjustedModelData.rms}
@@ -13,6 +14,8 @@ getCrudeAndAdjustedModelData(model, level = 0.95,
 \method{getCrudeAndAdjustedModelData}{default}(model, level = 0.95,
   remove_interaction_vars = TRUE, remove_strata = FALSE,
   remove_cluster = FALSE, var_select, ...)
+
+\method{[}{getCrudeAndAdjustedModelData}(x, i, j, ...)
 
 \method{getCrudeAndAdjustedModelData}{rms}(model, level = 0.95,
   remove_interaction_vars = TRUE, remove_strata = FALSE,
