@@ -1,6 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/printCrudeAndAdjustedModel.R
 \name{printCrudeAndAdjustedModel}
+\alias{[.printCrudeAndAdjusted}
 \alias{htmlTable.printCrudeAndAdjusted}
 \alias{knit_print.printCrudeAndAdjusted}
 \alias{latex.printCrudeAndAdjusted}
@@ -20,6 +21,8 @@ rbind.printCrudeAndAdjusted(..., alt.names, deparse.level = 1)
 \method{print}{printCrudeAndAdjusted}(x, css.rgroup = "", ...)
 
 \method{htmlTable}{printCrudeAndAdjusted}(x, css.rgroup = "", ...)
+
+\method{[}{printCrudeAndAdjusted}(x, i, j, ...)
 
 \method{knit_print}{printCrudeAndAdjusted}(x, css.rgroup = "", ...)
 
