@@ -3,6 +3,7 @@ NEWS for the Greg package
 Changes fro 1.1.2
 -----------------
 * Added a check for null as input parameter to printCrudeAndAdjusted
+* Added a subset function for get/printCrudeAndAdjusted
 
 Changes for 1.1.1
 -----------------
